--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "neuro-quiz",
-  "version": "1.0.0",
+  "version": "1.0.2",
+  "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0"
   }
