--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "neuro-quiz",
-  "version": "1.0.2",
-  "type": "module",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node api/index.js"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0"
   }
