--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "neuro-quiz",
   "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node api/index.js"
-  },
+  "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0"
   }
