--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "neuro-quiz",
+  "version": "1.0.0",
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.7"
+    "@supabase/supabase-js": "^2.39.0"
   }
 }
